// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a default DialogBox control 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={false}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal test-class"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="info-circle"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "#5bc0de",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p></p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;

exports[`Test pressing the "yes" button on the default DialogBox 1`] = `
<DialogBox
  className=""
  contentEditable={false}
  dialogType="info"
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  location="none"
  message="Testing click handler for yes"
  noedit={false}
  nohover={false}
  noripple={false}
  onClose={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={false}
  visible={true}
  width=""
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnOverlayClick={false}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  />
</DialogBox>
`;

exports[`Test retrieval of DialogBox props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "dialogType": "info",
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "location": "none",
  "message": "",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClose": [Function],
  "onOpen": [Function],
  "onSelection": [Function],
  "selected": false,
  "show": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "visible": true,
  "width": "",
}
`;

exports[`Test the creation of an custom DialogBox 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="car"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "magenta",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Sample info message</p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;

exports[`Test the creation of an error DialogBox 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="times-circle"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "#d9534f",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Sample error message</p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;

exports[`Test the creation of an info DialogBox 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="info-circle"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "#5bc0de",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Sample info message</p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;

exports[`Test the creation of an success DialogBox 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="check-circle"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "#5cb85c",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Sample success message</p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;

exports[`Test the creation of an warning DialogBox 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  closeTimeoutMS={0}
  contentLabel="DialogBox"
  isOpen={true}
  onAfterOpen={[Function]}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={false}
  style={
    Object {
      "content": Object {
        "bottom": "auto",
        "left": "50%",
        "marginRight": "-50%",
        "padding": "15px",
        "right": "auto",
        "top": "40%",
        "transform": "translate(-50%, -50%)",
      },
    }
  }
>
  <div
    className="ui-dialogbox dialogBox normal"
  >
    <div
      className="dialogBoxIcon"
    >
      <Icon
        className="dialogBoxIcon"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        iconName="exclamation-circle"
        id=""
        imageFile=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="xxlarge"
        style={
          Object {
            "color": "#f0ad4e",
          }
        }
        testing={false}
        visible={true}
        width=""
      />
    </div>
    <div
      className="dialogBoxMessageContainer"
    >
      <div
        className="dialogBoxMessage"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Sample warning message</p>",
          }
        }
      />
      <div
        className="buttonBar"
      >
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="Yes"
          visible={true}
          width=""
        />
        <div
          className="spacer"
        />
        <ButtonText
          className="dialogBoxButton"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          justify={2}
          location="none"
          noedit={false}
          nohover={false}
          noicon={true}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={false}
          text="No"
          visible={true}
          width=""
        />
      </div>
    </div>
  </div>
</Modal>
`;
